--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       { key: "semi",          label: "Semi",                           formUrl: "https://forms.gle/REEMPLAZAR_SEMI" },
       { key: "hidrocateo",    label: "Equipo de Hidrocateo",           formUrl: "https://forms.gle/REEMPLAZAR_HIDROCATEO" },
       { key: "portavolquete", label: "Portavolquete (Simple / Doble)", formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdb4MQuDbuJF01FvPhvHZiuTPj4VdvFt2UuAD4sy4EBwo9HSA/viewform?usp=dialog" },
-      { key: "pickup",        label: "Pick Up",                        formUrl: "https://forms.gle/REEMPLAZAR_PICKUP" }
+      { key: "pickup",        label: "Pick Up",                        formUrl: "https://forms.gle/REEMPLAZAR_PICKUP" },
       { key: "minipala",      label: "Minipala",                       formUrl: "https://forms.gle/REEMPLAZAR_MINIPALA" },
       { key: "caldera",       label: "Caldera",                        formUrl: "https://forms.gle/REEMPLAZAR_CALDERA" },
       { key: "cisterna",      label: "Cisterna",                       formUrl: "https://forms.gle/REEMPLAZAR_CISTERNA" }
