--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- LOGO: reemplazar src (URL pública o archivo local) -->
       <img
         id="companyLogo"
-        src="file:///C:/Users/usuario/Downloads/LOGO VDS.jpeg"
+        src="icons/LOGO VDS.jpeg"
         alt="Logo Empresa"
         class="h-10 w-auto"
       />
