--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- LOGO: reemplazar src (URL pública o archivo local) -->
       <img
         id="companyLogo"
-        src="https://raw.githubusercontent.com/dpastorino-arch/Check-Unidades-v2/main/LOGO%20VDS.jpeg"
+        src="./LOGO%20VDS.jpeg"
         alt="Logo Empresa"
         class="h-10 w-auto"
       />
