--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
       </button>
     </div>
   </header>
-     <!-- Botones -->
+
+    <!-- Main -->
+  <main class="max-w-5xl mx-auto px-4 py-10">
+    <section class="mb-6">
+      <h2 class="text-lg font-semibold mb-2">Menú de unidades</h2>
+      <p class="text-sm text-slate-600">
+        Tocá un botón para abrir el Google Form del checklist correspondiente.
+      </p>
+      <p class="mt-2 text-xs text-slate-500">
+        Nota: Para volver al menú, usá “Atrás” del navegador o configurá el enlace de retorno en el mensaje de confirmación del Form (ver botón “¿Dónde cambio links?”).
+      </p>
+    </section>
+    
+  <!-- Botones -->
     <section id="buttonsGrid" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></section>
 
     <!-- PWA hint -->
