--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         <p class="text-sm text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
       </div>
 
+      <button
+        id="howtoBtn"
+        class="rounded-xl bg-slate-900 px-4 py-2.5 text-sm font-semibold text-white hover:bg-slate-800 active:scale-[0.99] transition"
+        type="button"
+      >
+        ¿Dónde cambio links?
+      </button>
+    </div>
+  </header>
+
   <!-- Main -->
   <main class="max-w-5xl mx-auto px-4 py-10">
     <section class="mb-6">
@@ -50,7 +60,7 @@
         Tocá un botón para abrir el Google Form del checklist correspondiente.
       </p>
       <p class="mt-2 text-xs text-slate-500">
-        Nota: Para volver al menú, usá el link "https://dpastorino-arch.github.io/Check-Unidades-v2/” que figurá una vez completado y enviado el forms.
+        Nota: Para volver al menú, usá “Atrás” del navegador o configurá el enlace de retorno en el mensaje de confirmación del Form (ver botón “¿Dónde cambio links?”).
       </p>
     </section>
 
