--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
       { key: "tractor",       label: "Tractor",                        formUrl: "https://forms.gle/REEMPLAZAR_TRACTOR" },
       { key: "semi",          label: "Semi",                           formUrl: "https://forms.gle/REEMPLAZAR_SEMI" },
       { key: "hidrocateo",    label: "Equipo de Hidrocateo",           formUrl: "https://forms.gle/REEMPLAZAR_HIDROCATEO" },
-      { key: "portavolquete", label: "Portavolquete (Simple / Doble)", formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdb4MQuDbuJF01FvPhvHZiuTPj4VdvFt2UuAD4sy4EBwo9HSA/viewform?usp=dialog" },
+      { key: "portavolquete", label: "Portavolquete (Simple / Doble)", formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdb4MQuDbuJF01FvPhvHZiuTPj4VdvFt2UuAD4sy4EBwo9HSA/viewform" },
       { key: "pickup",        label: "Pick Up",                        formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSc8rsibIvTFdqQ-MTl6gsD_wf4A7nbWM6Or5NBqXiORxqBS6w/viewform" },
       { key: "minipala",      label: "Minipala",                       formUrl: "https://forms.gle/REEMPLAZAR_MINIPALA" },
-      { key: "caldera",       label: "Caldera",                        formUrl: "https://forms.gle/REEMPLAZAR_CALDERA" },
+      { key: "caldera",       label: "Caldera",                        formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSfo_sT22EMNsRT8G2ENAI8zniloAeTDEpY2bfiGHXYVm_6Q8g/viewform" },
       { key: "cisterna",      label: "Cisterna",                       formUrl: "https://forms.gle/REEMPLAZAR_CISTERNA" }
     ];
 
