--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         Tocá un botón para abrir el Google Form del checklist correspondiente.
       </p>
       <p class="mt-2 text-xs text-slate-500">
-        Nota: Para volver a este menú de Check de Unidades, una vez completado y enviado el formulario les aparecerá este link "https://dpastorino-arch.github.io/Check-Unidades-v2/ 2.
+        Nota: Para volver a este menú de Check de Unidades, una vez completado y enviado el formulario les aparecerá este link "https://dpastorino-arch.github.io/Check-Unidades-v2/"  .
       </p>
     </section>
 
