--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         class="h-10 w-auto"
       />
       <div class="flex-1">
-        <h1 class="text-xl font-semibold">Checklist de Unidades</h1>
-        <p class="text-sm text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
+        <h1 class="text-2xl font-semibold">Checklist de Unidades</h1>
+        <p class="text-m text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
       </div>
 
       <button
