--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         id="companyLogo"
         src="./LOGO%20VDS.jpeg"
         alt="Logo Empresa"
-        class="h-30 w-auto"
+        class="h-20 w-auto"
       />
       <div class="flex-1">
-        <h1 class="text-2xl font-semibold">Checklist de Unidades</h1>
-        <p class="text-m text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
+        <h1 class="text-3xl font-semibold">Checklist de Unidades</h1>
+        <p class="text-base text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
       </div>
 
      
