--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         alt="Logo Empresa"
         class="h-20 w-auto"
       />
-      <div class="flex-1">
+      <div class="flex-1 text-center">
         <h1 class="text-3xl font-semibold">Checklist de Unidades</h1>
         <p class="text-base text-slate-500">Seleccioná el tipo de vehículo/equipo</p>
       </div>
